Fix T48196: Crash enabling modal operator in exec

Not good practice, but better not crash.